--- a/curtaincall/inquiries.html
+++ b/curtaincall/inquiries.html
@@ -68,6 +68,10 @@
     .menu-item:hover {
       color: black;
     }
+    .menu-item a {
+      color: inherit;
+      text-decoration: none;
+    }
     .form-container {
       background: black;
       padding: 20px;
@@ -127,12 +131,20 @@
   <div class="main-wrapper">
     <img src="../assets/CurtainLeft.png" alt="Left Curtain" class="curtain">
 
-    <div class="sidebar">
+     <div class="sidebar">
       <div id="spotlight" class="spotlight-bg"></div>
-      <div class="menu-item" data-spotlight="../assets/spotlight-home.png">Home</div>
-      <div class="menu-item active" data-spotlight="../assets/spotlight-inquiries.png" data-default="true">Inquiries</div>
-      <div class="menu-item" data-spotlight="../assets/spotlight-reviews.png">Reviews</div>
-      <div class="menu-item" data-spotlight="../assets/spotlight-galleries.png">Gallery</div>
+      <div class="menu-item" data-spotlight="../assets/spotlight-home.png">
+        <a href="home.html">Home</a>
+      </div>
+      <div class="menu-item active" data-spotlight="../assets/spotlight-inquiries.png" data-default="true" >
+        <a href="inquiries.html">Inquiries</a>
+      </div>
+      <div class="menu-item" data-spotlight="../assets/spotlight-reviews.png">
+        <a href="#">Reviews</a>
+      </div>
+      <div class="menu-item" data-spotlight="../assets/spotlight-galleries.png">
+        <a href="#">Gallery</a>
+      </div>
     </div>
 
 
