Index page now links to Curtain Call Home Page rather than inquiries

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 </head>
 <body>
   <h1>Welcome to the Rotborough Web Portal</h1>
-  <a href="curtaincall/inquiries.html">Curtain Call</a>
+  <a href="curtaincall/home.html">Curtain Call</a>
 </body>
 </html>
