Adding Jester's Pizza Delivery Tab

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       text-decoration: none;
       border: 2px solid red;
       padding: 10px 20px;
+      margin: 10px;
       transition: background-color 0.3s, color 0.3s;
     }
     a:hover {
@@ -31,5 +32,6 @@
 <body>
   <h1>Welcome to the Rotborough Web Portal</h1>
   <a href="curtaincall/home.html">Curtain Call</a>
+  <a href="jesterspizza/delivery.html">Jester Pizza</a>
 </body>
 </html>
