Added My Pet Boy homepage and screenshots page

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
   <a href="curtaincall/home.html">Curtain Call</a>
   <a href="jesterspizza/delivery.html">Jester Pizza</a>
   <a href="thesecret/secrethome.html">The Secret presents: Rotborough Blind Items</a>
+  <a href="mypetboy/home.html">My Pet Boy</a>
 </body>
 </html>
