--- a/mypetboy/home.html
+++ b/mypetboy/home.html
@@ -71,7 +71,7 @@
 
   <div class="nav">
     <a href="screenshots.html"><img src="../assets/screenshotbtn.png" alt="Screenshots" /></a>
-    <a href="#"><img src="../assets/buildaboybtn.png" alt="Build a Boy" /></a>
+    <a href="buildaboy.html"><img src="../assets/buildaboybtn.png" alt="Build a Boy" /></a>
     <a href="#"><img src="../assets/boyfoundationbtn.png" alt="Boy Friendship Foundation" /></a>
   </div>
 
