--- a/mypetboy/buildaboy.html
+++ b/mypetboy/buildaboy.html
@@ -130,6 +130,12 @@
     <label for="accessorySelect">Choose accessory:</label>
     <select id="accessorySelect">
       <option value="TongueAccessory">Tongue</option>
+	  <option value="DrunkAccessory">Bad Boy!</option>
+	  <option value="BasketballAccessory">Fan Boy</option>
+	  <option value="FarmAccessory">Pierced</option>
+	  <option value="BeachAccessory">Cool Boy</option>
+	  <option value="SleepAccessory">Spa Day</option>
+	  <option value="CigaretteAccessory">S</option>
     </select>
     <br /><br />
     <button onclick="generatePDF()">Print Your Boy</button>
