--- a/mypetboy/buildaboy.html
+++ b/mypetboy/buildaboy.html
@@ -61,6 +61,9 @@
   </style>
 </head>
 <body>
+	<audio id="backgroundMusic" autoplay loop>
+  <source src="../assets/babmusic.mp" type="audio/mpeg">
+  </audio>
   <div class="header">
     <a href="home.html"><img src="../assets/mpblogo.png" alt="My Pet Boy Logo" /></a>
     <img src="../assets/rageboyexclusive.png" alt="Exclusively for RageBoy 2000 GX" />
