--- a/mypetboy/buildaboy.html
+++ b/mypetboy/buildaboy.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 	<audio id="backgroundMusic" autoplay loop>
-  <source src="../assets/babmusic.mp" type="audio/mpeg">
+  <source src="../assets/babmusic.mp3" type="audio/mpeg">
   </audio>
   <div class="header">
     <a href="home.html"><img src="../assets/mpblogo.png" alt="My Pet Boy Logo" /></a>
