--- a/growingminds/assessment.html
+++ b/growingminds/assessment.html
@@ -8,7 +8,8 @@
     body {
       font-family: sans-serif;
       text-align: center;
-      background-color: #f2f2f2;
+            background: url('../assets/bricktile.png');
+      background-size: auto;
       margin: 0;
       padding: 20px;
     }
