--- a/growingminds/home.html
+++ b/growingminds/home.html
@@ -51,13 +51,21 @@
   <div class="container">
     <img src="../assets/gmBanner.png" alt="Banner" class="banner">
     <div class="menu">
-      <img src="../assets/MenuHome_Selected.png" alt="Home">
+      <a href="home.html">
+		<img src="../assets/MenuHome_selected.png" alt="Home">
+	  </a>
       <a href="assessment.html">
 		<img src="../assets/MenuTesting.png" alt="Testing">
-		</a>
-      <img src="../assets/MenuTestimonials.png" alt="Testimonials">
-      <img src="../assets/MenuFAQ.png" alt="FAQ">
-      <img src="../assets/MenuGoal.png" alt="Goal">
+	  </a>
+	  <a href="testimonials.html">
+		<img src="../assets/MenuTestimonials.png" alt="Testimonials">
+	  </a>
+	  <a href="faq.html">
+		<img src="../assets/MenuFAQ.png" alt="FAQ">
+	  </a>
+	  <a href="ourgoal.html">
+		<img src="../assets/MenuGoal.png" alt="OurGoal">
+	  </a>
     </div>
     <div class="content">
       <h1>Welcome</h1>
